--- a/main.html
+++ b/main.html
@@ -4,10 +4,14 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Id color</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p id="yellow">paragraph-1</p>
+	<p id="red">paragraph-2</p>
+	<p id="green">paragraph-3</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
